2004-03-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix search problem on different charset page than display charset
	* proto.h (conv_search_string): added
	* search.c (migemostr): use conv_search_string
		(conv_search_string): added
	* main.c (srchcore): use conv_search_string
		(reMark): ditto
	* menu.c (menu_search_forward): ditto
		(menu_search_backward): ditto
		(menu_search_next_previous): ditto

2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* rc.c: cleanup LANG == JA

2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): DisplayCharset also follow locale

2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/w3mhelp.cgi.in: use charset parramter
	* scripts/w3mhelp-funcdesc.en.pl.in: add charset
	* scripts/w3mhelp-funcdesc.ja.pl.in: ditto

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): don't use SystemCharset for default of
		DisplayChaset, DocumentCharset

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.5
	* version.c.in: update
	* doc/README: version 0.5, release date, maintainer
	* doc-jp/README: ditto
	* NEWS: update

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): DisplayCharset and DocumentCharset also follow 
	    locale configuration
	* Makefile.in (distclean): distclean libwc
	* libwc/Makefile.in: add distclean
	* scripts/multipart/Makefile.in: add distclean
	* scripts/w3mman/Makefile.in: add distclean
	* scripts/Makefile.in: add distclean

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimg/Makefile.in (distclean): rm -f w3mimg.a

2004-03-22  Akihiro Sagawa <sagawa@sohgoh.net>

	* [w3m-dev 04046]
	* configure.in (AC_W3M_IPv6): should check it after ext libs

2004-03-22  Akihiro Sagawa <sagawa@sohgoh.net>

	* [w3m-dev 04045]
	* Makefile.in (DEFUNS): need $(top_srcdir)

2004-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (install-po): fix for broken sh.
	  reported in [w3m-dev 04043] Re: w3m 0.5

2004-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>
